[package]
name = "servo-media-gstreamer"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[build-dependencies]
regex = "1.0"
zip = "0.3.1"
lazy_static = "1.0"

[lib]
name = "servo_media_gstreamer"
path = "lib.rs"

[dependencies]
boxfnonce = "0.1.0"
mime = "0.3.13"
log = "0.4"

[dependencies.byte-slice-cast]
version = "0.2"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gstreamer-sys]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
features = ["v1_12"]

[dependencies.gstreamer]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.gstreamer-app]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.gstreamer-audio]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.gstreamer-base]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.gstreamer-player]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.gstreamer-sdp]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.gstreamer-webrtc]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.gstreamer-video]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.ipc-channel]
version = "0.12"

[dependencies.lazy_static]
version = "1.2.0"

[dependencies.servo-media]
path = "../../servo-media"

[dependencies.servo-media-audio]
path = "../../audio"

[dependencies.servo-media-player]
path = "../../player"

[dependencies.url]
version = "2.0"

[dependencies.servo-media-streams]
path = "../../streams"

[dependencies.servo-media-traits]
path = "../../traits"

[dependencies.servo-media-webrtc]
path = "../../webrtc"

[dependencies.servo-media-gstreamer-render]
path = "render"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
servo-media-gstreamer-render-unix = { path = "render-unix", features = ["gl-egl", "gl-x11"] }

[target.'cfg(any(target_os = "android"))'.dependencies]
servo-media-gstreamer-render-android = { path = "render-android" }
