[package]
name = "servo-media-gstreamer-render-android"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[lib]
name = "servo_media_gstreamer_render_android"
path = "lib.rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.gstreamer]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.gstreamer-gl]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
features = ["egl"]

[dependencies.gstreamer-video]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.servo-media-player]
path = "../../../player"

[dependencies.servo-media-gstreamer-render]
path = "../render"
