[package]
name = "servo-media-gstreamer-render"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[lib]
name = "servo_media_gstreamer_render"
path = "lib.rs"

[dependencies.gstreamer]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.gstreamer-video]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"

[dependencies.servo-media-player]
path = "../../../player"
